Fix: added footer to graph files and fixed spacing issue on graph4

--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,15 @@ h2,
 h3,
 p,
 li,
-button {
+button,
+text {
     font-family: var(--font-family);
+}
+
+text {
+    display: block;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 button {
